deployment-app.yaml
---
# hedgedoc itself
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
  namespace: hedgedoc
  labels:
    app: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
      - name: hd
        image: quay.io/hedgedoc/hedgedoc:1.9.4
        ports:
          - containerPort: 3000
