deployment-db.yaml
---
# database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc-db
  namespace: hedgedoc
  labels:
    app: hedgedoc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc-db
  template:
    metadata:
      labels:
        app: hedgedoc-db
    spec:
      containers:
      - name: hd-postgres
        image: postgres:13.4-alpine
        ports:
        - containerPort: 5432
