service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hd-db-svc
  namespace: hedgedoc
spec:
  selector:
    app: hedgedoc-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: hd-app-svc
  namespace: hedgedoc
spec:
  selector:
    app: hedgedoc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  clusterIP: None
