ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hd-ingress
  namespace: hedgedoc
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - hd-test.k8s-test.cs.aalto.fi
      secretName: hedgedoc-tls
  rules:
    - host: hd-test.k8s-test.cs.aalto.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hd-app-svc
                port:
                  number: 80
